src/App.css
@charset "utf-8";
 
/*-----------------------------------
#   Fonts 
------------------------------------*/
@import url('https://fonts.googleapis.com/css2?family=Jockey+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bigshot+One&family=Poppins:wght@400;500;600;700&display=swap');
 
/*-----------------------------------
#   Common Variables 
------------------------------------*/
 
:root {
  --selection-bg: #454545;
  --selection-text: #fff;
  --placeholder-text: #ccc;
}
 
/*-----------------------------------
#   Common Css 
------------------------------------*/
 
body {
  height: 100%;
  font-size: 14px;
  font-family: "Poppins", sans-serif;
  line-height: 1;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #000;
  background-color: #f6f8fc;
}
 
ul,
ol {
  list-style: none;
  margin: 0;
  padding: 0;
}
 
img {
  max-width: 100%;
  height: auto;
}
 
a {
  text-decoration: none;
  outline: none !important;
  color: inherit;
  transition: 0.3s ease;
}
 
@media (hover: hover) {
  a:hover {
    color: inherit;
  }
}
 
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  padding: 0;
  font-weight: 400;
}
 
p {
  font-size: 16px;
  line-height: 24px;
  color: #000;
  margin: 0;
}

.text-gradient{
    background: linear-gradient(90deg, #FEF621 21.5%, #54E90F 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
    text-fill-color: transparent;
}
 
.home-wrapper{
  width: 100%;
  min-height: 100vh;
  background-image: url("../public/images/bg.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  background-position: center top;
}
 
 
header{
  padding-top: 25px;
}

header .container{
  position: relative;
}

header .container::before{
  content: "";
  width: 821px;
  max-width: 100%;
  height: 2px;
  display: block;
  background-image: url("../public/images/icons/line-1.png");
  background-repeat: no-repeat;
  position: absolute;
  right: 12px;
  bottom: 0;
}

header .container{
  display: flex;
  align-items: center;
  justify-content: space-between;
}


header .brand-logo{
  max-width: 180px;
}

header .container .buy-now-btn{
  margin-left: 20px;
}

.more-statics .round-btn{
  display: inline-block;
  max-width: 32px;
}

.more-statics .round-btn img{
  width: 100%;
}
.more-statics p{
  font-family: "Jockey One", sans-serif;
  font-size: 24px;
}

.fuziku-info{
  padding-top: 45px;
  padding-bottom: 30px;
}
 
.fuziku-info .fuziku-info-content{
  position: relative;
}
  
.fuziku-info-media{
  position: relative;
  margin-top: 10px;
}
 
.buy-now-btn{
  display: inline-block;
  font-family: "Jockey One", sans-serif;
  font-size: 22px;
  font-weight: 600;
  text-transform: uppercase;
  background: linear-gradient(180deg, #FAF600 0%, #4CEE00 100%);
  padding: 12px 15px;
  min-width: 165px;
  border-radius: 10px;
  text-align: center;
}
 
.fuziku-info-media .buy-now-btn-wrapper{
  position: absolute;
  left: 393px;
  top: 31px;
}
.fuziku-info-media .buy-now-btn-wrapper .buy-now-btn{
  position: relative;
}
.fuziku-info-media .buy-now-btn-wrapper .buy-now-btn::before{
  content: url("../public/images/icons/ic-equal.png");
  position: absolute;
  left: -27px;
  top: 50%;
  transform: translateY(-50%);
}
.fuziku-info-media .buy-now-btn-wrapper .buy-now-btn:first-child{
  margin-bottom: 20px;
}
 
.fuziku-info-text p{
  font-size: 18px;
  line-height: 28px;
  color: #fff;
}
 
.fuziku-info-text p .brand{
  font-size: 20px;
  font-family: "Jockey One", sans-serif;
  background: linear-gradient(90deg, #FEF621 21.5%, #54E90F 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  text-fill-color: transparent;
}
 
.whitepaper-link{
  padding: 5px 10px;
    background: linear-gradient(90deg, #FEF621 21.5%, #54E90F 100%);
    font-size: 15px;
    color: #000;
    font-weight: 700;
    border-radius: 8px;
    display: inline-block;
    margin-left: 10px;
}
 
.whitepaper-link:hover{
  color: #000;
}
 
 
/*-----------------------------------
# Road Map section CSS
------------------------------------*/
.section-title{
  margin-bottom: 20px;
}
.section-title h4{
  font-size: 55px;
  font-family: "Jockey One", sans-serif;
  background: linear-gradient(90deg, #FEF621 21.5%, #54E90F 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  text-fill-color: transparent;
  position: relative;
  text-align: center;
  padding-bottom: 10px;
}
 
.section-title h4::before{
  content: url("../public/images/icons/border-line.png");
  position: absolute;
  bottom: -15px;
  left: 50%;
  transform: translateX(-50%);
}
 
.section-title p{
  font-size: 18px;
  color: #fff;
  padding-top: 20px;
}
 
.road-map-stages-list > li{
  padding-top: 45px;
  padding-bottom: 45px;
  position: relative;
}
 
.road-map-stages-list >  li::after{
    content: "";
    width: calc(100% - 12px);
    max-width: 100%;
    height: 2px;
    display: block;
    background-image: url("../public/images/icons/line-3.png");
    background-repeat: no-repeat;
    background-size: cover;
    position: absolute;
    left: 0;
    bottom: 0;
}
 
.road-map-stages-list >  li:nth-child(even):after{
    transform: rotate(180deg);
    background-image: url("../public/images/icons/line-3.png");
    left: unset;
    right: 0;
} 
 
.road-map-stage h4{
  font-size: 40px;
  font-family: "Jockey One", sans-serif;
  padding-bottom: 30px;
  color: #71E512;
}
 
.road-map-stages-list >  li:nth-child(even) .road-map-stage h4{
  color: #FEF621;
}
 
.road-map-stage > ul li{
  font-size: 18px;
  line-height: 26px;
  color: #fff;
  position: relative;
  padding-left: 36px;
  margin-bottom: 18px;
}
.road-map-stage ul li:last-child{
  margin-bottom: 0;
}
.road-map-stage ul li::before{
  content: url("../public/images/icons/ic-check.svg");
  position: absolute;
  left: 0;
  top: 2px;
}
 
footer{
  padding: 45px 0;
}

footer .container{
  position: relative;
}

footer .container::before{
    content: "";
    width: calc(100% - 12px);
    max-width: 100%;
    height: 2px;
    display: block;
    background-image: url("../public/images/icons/line-3.png");
    background-repeat: no-repeat;
    background-size: cover;
    position: absolute;
    left: 12px;
    top: -45px;
    transform: rotate(180deg);
}
 
.footer-social ul{
  display: flex;
}
.footer-social ul li:first-child{
  padding-left: 0;
}
.footer-social ul li:last-child{
  padding-right: 0;
}
.footer-social ul li{
  padding: 0 10px;
  position: relative;
}
 
.footer-social ul li::after{
  content: url("../public/images/icons/border.png");
  position: absolute;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
}
 
.footer-social ul li:last-child::after{
  content: "";
}
 
.desclaimer-text p{
  font-size: 14px;
  color: #fff;
}
 
.desclaimer-text p span{
  font-size: 22px;
  font-family: "Jockey One", sans-serif;
}
 
.countdown-timer h4{
  font-size: 52px;
  font-family: "Jockey One", sans-serif;
  background: linear-gradient(90deg, #FEF621 21.5%, #54E90F 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  text-fill-color: transparent;
  letter-spacing: 2px;
  font-weight: 800;
  color: #fff;
  padding-bottom: 30px;
}
 
.countdown-timer .Hour{
  font-size: 75px;
  line-height: 0.8;
  font-weight: 800;
  color: #fff;
  padding-bottom: 20px;
}
 
.countdown-timer p{
  color: #fff;
  font-weight: 700;
}
 
.copy-btn{
  all: unset;
  padding: 5px 10px;
  background: linear-gradient(90deg, #FEF621 21.5%, #54E90F 100%);
  border-radius: 8px;
  color: #000;
  margin-top: 5px;
  display: inline-block;
  cursor: pointer;
}
 
.client-testimonial{
  padding-top: 45px;
  padding-bottom: 45px;
}


.client-testimonial .slick-slide{
  padding: 10px;
  padding-bottom: 0;
}

.testimonial-box{
  padding: 10px;
  background-color: #fff;
  border-radius: 8px;
}
.testimonial-box img{
  margin: 0 auto;
}
 
 
.client-testimonial .slick-arrow{
  all: unset;
  cursor: pointer;
  font-size: 0;
  display: inline-block;
  width: 33px;
  height: 33px;
  background-repeat: no-repeat;
  background-size: cover;
}
.client-testimonial .slick-arrow.slick-prev{
  background-image: url("../public/images/icons/arrowPrev.svg");
  position: absolute;
  top: 50%;
  left: 0;
  transform: translateY(-50%);
}
.client-testimonial .slick-arrow.slick-next{
  background-image: url("../public/images/icons/arrowNext.svg");
  position: absolute;
  top: 50%;
  right: 0;
  transform: translateY(-50%);
}

.client-testimonial .slick-arrow.slick-disabled{
  visibility: hidden;
  opacity: 0;
}
 
.client-testimonial .slick-slider{
  padding: 0 40px;
}
 
.copy-code{
  max-width: 22px;
  display: inline-block;
  margin-left: 6px;
  cursor: pointer;
}
 
.fuziku-info-text{
  max-width: 400px;
}

.road-map{
  padding-top: 40px;
}


@keyframes animateDownUp {
  0% {
        transform: rotateX(0deg) translateY(0px);
    }
  50% {
        transform: rotateX(0deg) translateY(20px);
    }
  100% {
        transform: rotateX(0deg) translateY(0px);
    }
}

.animateDownUp {
  -webkit-animation-name: animateDownUp;
  animation-name: animateDownUp;
  -webkit-animation-duration: 5s;
  animation-duration: 5s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}
 
@media only screen and (max-width:1199px){
  .fuziku-info-media .buy-now-btn-wrapper{
    top: 36%;
    transform: translateY(-50%);
    left: 382px;
  }
 
  .countdown-timer .Hour{
    font-size: 60px;
  }
}
 
@media only screen and (max-width:991px){
  .fuziku-info-text{
    max-width: 100%;
    margin: 0;
    margin-top: 20px;
  }
  
  .fuziku-info-media .buy-now-btn-wrapper{
    left: 391px;
  }
  .client-testimonial{
    padding: 20px 0;
  }
}
 
@media only screen and (max-width:767px){
  header .brand-logo{
    max-width: 140px;
  }
  header .container::before{
    bottom: -25px;
  }
  .section-title h4{
    font-size: 42px;
  }
  .road-map-stage h4{
    font-size: 30px;
  }
  .road-map-stage > ul li{
    font-size: 16px;
    line-height: 24px;
  }
 
  .fuziku-info-media .buy-now-btn-wrapper{
    position: static;
    transform: translateY(0);
  }
 
  .fuziku-info-media .media-img{
    text-align: center;
  }
  .fuziku-info-media .buy-now-btn-wrapper .buy-now-btn::before{
    display: none;
  }
  .fuziku-info-media .buy-now-btn-wrapper{
    margin-top: 20px;
    text-align: center;
  }
  .fuziku-info-media .buy-now-btn-wrapper .buy-now-btn{
    margin: 0 10px;
  }
}
 
 
@media only screen and (max-width: 479px){
  header .brand-logo{
    max-width: 100px;
    display: inline-block;
  }
  .copy-btn{
    font-size: 10px;
  }
  .countdown-timer h4{
    font-size: 32px;
  }
  .countdown-timer .Hour{
    font-size: 38px;
  }

  .more-statics p{
    font-size: 18px;
  }
}
 
/*---------------------------
# Coming Soon Page CSS
----------------------------*/
 
.coming-soon-wrapper{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.coming-soon-content{
  text-align: center;
}
.coming-soon-content h1{
  font-size: 60px;
  font-weight: 700;
  background: linear-gradient(90deg, #FEF621 21.5%, #54E90F 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  text-fill-color: transparent;
  padding-bottom: 30px;
}
 
.coming-soon-content p{
  font-size: 24px;
  color: #fff;
}
.Hour{
  color:white;
  font-size: 50px;
  font-weight: 900;
}
 
.Counter-Heading{
  font-size: 20px;
  color: white;
  font-weight: 700;
}

